development/assets/cloud-provider-kind.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: cloud-provider-kind
spec:
  containers:
  - image: $CLOUD_PROVIDER_KIND_IMAGE
    imagePullPolicy: Always
    name: cloud-provider-kind
    volumeMounts:
      - name: docker-socket
        mountPath: /var/run/docker.sock
  imagePullSecrets:
  - name: dockerregistry-config
  restartPolicy: Always
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  volumes:
  - name: docker-socket
    hostPath:
      path: /var/run/docker.sock
      type: Socket
