development/assets/kyma-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: kyma-gateway
  namespace: kyma-system
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - hosts:
    - '*.kind-127-0-0-1.nip.io'
    port:
      name: https
      number: 8443
      protocol: HTTPS
    tls:
      credentialName: kyma-gateway-certs
      mode: SIMPLE
